--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       href="https://fonts.googleapis.com/css2?family=League+Spartan:wght@100;200;300;400;600&display=swap"
       rel="stylesheet"
     />
-    <title>Pass generator</title>
+    <title>Random Password Generator</title>
     <link rel="stylesheet" href="passgen.css">
 </head>
 <body>
@@ -45,22 +45,22 @@
             <!-- checkboxes-->
             <div class="check">
                 <input type="checkbox" id="uppercase">
-                <label for="uppercase">Includes Uppercase letters</label>
+                <label for="uppercase">Include Uppercase Letters</label>
             </div>
 
             <div class="check">
                 <input type="checkbox" id="lowercase">
-                <label for="lowercase">Includes Lowercase letters</label>
+                <label for="lowercase">Include Lowercase Letters</label>
             </div>
 
             <div class="check">
                 <input type="checkbox" id="numbers">
-                <label for="numbers">Includes Numbers </label>
+                <label for="numbers">Include Numbers</label>
             </div>
 
             <div class="check">
                 <input type="checkbox" id="symbols">
-                <label for="symbols">Includes Symbols </label>
+                <label for="symbols">Include Symbols</label>
             </div>
 
             <!-- strength section-->
